--- a/src/main/resources/templates/administrativo/enderecos/editar.html
+++ b/src/main/resources/templates/administrativo/enderecos/editar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar Endereço - Meg Kids</title>
+    <title>Editar Endereço - Meg Kids</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -26,28 +26,28 @@
 <body>
 <div class="container">
     <div class="header text-center">
-        <h1>Cadastrar Novo Endereço - Meg Kids</h1>
+        <h1>Editar Endereço - Meg Kids</h1>
     </div>
     <form action="/salvarEndereco" method="POST">
         <div class="mb-3">
             <label for="rua" class="form-label">Rua</label>
-            <input type="text" class="form-control" id="rua" name="rua" required>
+            <input type="text" class="form-control" id="rua" name="rua" value="Rua Exemplo" required>
         </div>
         <div class="mb-3">
             <label for="numero" class="form-label">Número</label>
-            <input type="text" class="form-control" id="numero" name="numero" required>
+            <input type="text" class="form-control" id="numero" name="numero" value="123" required>
         </div>
         <div class="mb-3">
             <label for="bairro" class="form-label">Bairro</label>
-            <input type="text" class="form-control" id="bairro" name="bairro" required>
+            <input type="text" class="form-control" id="bairro" name="bairro" value="Bairro Exemplo" required>
         </div>
         <div class="mb-3">
             <label for="cidade" class="form-label">Cidade</label>
-            <input type="text" class="form-control" id="cidade" name="cidade" required>
+            <input type="text" class="form-control" id="cidade" name="cidade" value="Cidade Exemplo" required>
         </div>
         <div class="mb-3">
             <label for="estado" class="form-label">Estado</label>
-            <input type="text" class="form-control" id="estado" name="estado" required>
+            <input type="text" class="form-control" id="estado" name="estado" value="Estado Exemplo" required>
         </div>
         <button type="submit" class="btn btn-custom">Salvar</button>
         <a href="/listarEndereco" class="btn btn-secondary">Cancelar</a>
