--- a/src/main/resources/templates/administrativo/itempedido/cadastro.html
+++ b/src/main/resources/templates/administrativo/itempedido/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar Endereço - Meg Kids</title>
+    <title>Cadastrar Item de Pedido - Meg Kids</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -26,31 +26,29 @@
 <body>
 <div class="container">
     <div class="header text-center">
-        <h1>Cadastrar Novo Endereço - Meg Kids</h1>
+        <h1>Cadastrar Item de Pedido - Meg Kids</h1>
     </div>
-    <form action="/salvarEndereco" method="POST">
+    <form action="/salvarItemPedido" method="POST">
         <div class="mb-3">
-            <label for="rua" class="form-label">Rua</label>
-            <input type="text" class="form-control" id="rua" name="rua" required>
+            <label for="pedidoItem" class="form-label">Pedido</label>
+            <select class="form-select" id="pedidoItem" name="pedidoItem" required>
+                <option value="1">Pedido 1</option>
+                <option value="2">Pedido 2</option>
+            </select>
         </div>
         <div class="mb-3">
-            <label for="numero" class="form-label">Número</label>
-            <input type="text" class="form-control" id="numero" name="numero" required>
+            <label for="produtoItem" class="form-label">Produto</label>
+            <select class="form-select" id="produtoItem" name="produtoItem" required>
+                <option value="1">Produto 1</option>
+                <option value="2">Produto 2</option>
+            </select>
         </div>
         <div class="mb-3">
-            <label for="bairro" class="form-label">Bairro</label>
-            <input type="text" class="form-control" id="bairro" name="bairro" required>
-        </div>
-        <div class="mb-3">
-            <label for="cidade" class="form-label">Cidade</label>
-            <input type="text" class="form-control" id="cidade" name="cidade" required>
-        </div>
-        <div class="mb-3">
-            <label for="estado" class="form-label">Estado</label>
-            <input type="text" class="form-control" id="estado" name="estado" required>
+            <label for="quantidadeItem" class="form-label">Quantidade</label>
+            <input type="number" class="form-control" id="quantidadeItem" name="quantidadeItem" required>
         </div>
         <button type="submit" class="btn btn-custom">Salvar</button>
-        <a href="/listarEndereco" class="btn btn-secondary">Cancelar</a>
+        <a href="/listarItemPedido" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
