--- a/src/main/resources/templates/administrativo/produtos/cadastro.html
+++ b/src/main/resources/templates/administrativo/produtos/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar Endereço - Meg Kids</title>
+    <title>Cadastrar Produto - Meg Kids</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -26,31 +26,27 @@
 <body>
 <div class="container">
     <div class="header text-center">
-        <h1>Cadastrar Novo Endereço - Meg Kids</h1>
+        <h1>Cadastrar Produto - Meg Kids</h1>
     </div>
-    <form action="/salvarEndereco" method="POST">
+    <form action="/salvarProduto" method="POST">
         <div class="mb-3">
-            <label for="rua" class="form-label">Rua</label>
-            <input type="text" class="form-control" id="rua" name="rua" required>
+            <label for="nomeProduto" class="form-label">Nome do Produto</label>
+            <input type="text" class="form-control" id="nomeProduto" name="nomeProduto" required>
         </div>
         <div class="mb-3">
-            <label for="numero" class="form-label">Número</label>
-            <input type="text" class="form-control" id="numero" name="numero" required>
+            <label for="descricaoProduto" class="form-label">Descrição</label>
+            <input type="text" class="form-control" id="descricaoProduto" name="descricaoProduto" required>
         </div>
         <div class="mb-3">
-            <label for="bairro" class="form-label">Bairro</label>
-            <input type="text" class="form-control" id="bairro" name="bairro" required>
+            <label for="preco" class="form-label">Preço</label>
+            <input type="number" step="0.01" class="form-control" id="preco" name="preco" required>
         </div>
         <div class="mb-3">
-            <label for="cidade" class="form-label">Cidade</label>
-            <input type="text" class="form-control" id="cidade" name="cidade" required>
-        </div>
-        <div class="mb-3">
-            <label for="estado" class="form-label">Estado</label>
-            <input type="text" class="form-control" id="estado" name="estado" required>
+            <label for="estoque" class="form-label">Estoque</label>
+            <input type="number" class="form-control" id="estoque" name="estoque" required>
         </div>
         <button type="submit" class="btn btn-custom">Salvar</button>
-        <a href="/listarEndereco" class="btn btn-secondary">Cancelar</a>
+        <a href="/listarProduto" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
