--- a/src/main/resources/templates/administrativo/enderecos/cadastro.html
+++ b/src/main/resources/templates/administrativo/enderecos/cadastro.html
@@ -27,7 +27,7 @@
 
 <div class="container mt-4">
     <a href="/" class="btn btn-outline-secondary mb-3">
-        <i class="fa-solid fa-house"></i> Voltar para Início
+        <i class="fa-solid fa-house"></i> Início
     </a>
 
     <h2 class="mb-4">Cadastrar Novo Endereço</h2>
