--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -36,11 +36,10 @@
                 <li class="nav-item"><a class="nav-link" th:href="@{/admin/clientes}">Clientes</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/admin/produtos}">Produtos</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/admin/categorias}">Categorias</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/admin/estoques}">Estoques</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/admin/estoque}">Estoques</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/admin/movimentacoes}">Movimentações</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/admin/vendas}">Vendas</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/admin/itens}">Itens de Venda</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/logout}">Logout</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/auth/logout}">Logout</a></li>
             </ul>
         </div>
     </div>
